--- a/Challenge.html
+++ b/Challenge.html
@@ -86,7 +86,7 @@
             </li>
             <li class="u-nav-item"><a
               class="u-active-palette-2-base u-border-2 u-border-active-custom-color-5 u-border-hover-white u-button-style u-nav-link u-text-active-white u-text-grey-90 u-text-hover-grey-90 u-white"
-              href="#" style="padding: 10px 13px;">Submissoin</a>
+              href="#" style="padding: 10px 13px;">Submission</a>
             <div class="u-nav-popup">
               <ul class="u-border-2 u-border-white u-nav u-unstyled u-v-spacing-13 u-nav-2">
                 <li class="u-nav-item"><a
