--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@ div.WordSection1
       </p>
     </div>
   </section>
-  <section class="u-clearfix u-white u-section-9" id="sec-0895">
+  <!-- <section class="u-clearfix u-white u-section-9" id="sec-0895">
     <div class="u-clearfix u-sheet u-sheet-1">
       <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Principal of participation</h3>
       <div class="u-expanded-width u-table u-table-responsive u-table-1">
@@ -754,7 +754,7 @@ div.WordSection1
           src="images/3502463-7c245ce4.png" alt=""></span><span
         class="u-file-icon u-icon u-text-palette-1-base u-icon-23"><img src="images/3502463-7c245ce4.png" alt=""></span>
     </div>
-  </section>
+  </section> -->
   <section class="u-clearfix u-section-10" id="sec-4d5e">
     <div class="u-clearfix u-sheet u-sheet-1">
       <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Principal of participation</h3>
