--- a/Organizer.html
+++ b/Organizer.html
@@ -1173,9 +1173,9 @@
         <span style="font-weight: 700;">School of Health Science and Engneering, University of Shanghai for Science and
           Technology</span>
         <br>
-        <br>Ziqiang Xu (<a href="mailto:ziqiang_xu@qq.com"
+        <br>Ziqiang Xu (<a href="mailto:ziqiang_xu@cumt.edu.cn"
           class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-grey-60 u-btn-1">
-          <span style="text-decoration: underline !important;">ziqiang_xu@qq.com</span>
+          <span style="text-decoration: underline !important;">ziqiang_xu@cumt.edu.cn</span>
         </a>)
       </p>
     </div>
