--- a/Organizer.html
+++ b/Organizer.html
@@ -46,6 +46,15 @@
   <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y34LB2L9HT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Y34LB2L9HT');
+</script>
 
 <body class="u-body u-white u-xl-mode" data-lang="en">
   <header class="u-clearfix u-header u-header" id="sec-2bff">
