--- a/Task1-Cine-reconstruction.html
+++ b/Task1-Cine-reconstruction.html
@@ -186,8 +186,7 @@
 				the current gold standard for the noninvasive evaluation of cardiac functional parameters. Typically,
 				cine MRI is obtained by electrocardiography (ECG) -gated segmented sequence since the full k-space
 				cannot be obtained within one acquisition window, where the segments of the entire k-space are read out
-				over multiple cardiac cycles. For patients with <span class="u-text-palette-2-base"
-					style="font-weight: 700;">voluntary breath-holds</span> or cardiac arrhythmia, image degradation
+				over multiple cardiac cycles. For patients with voluntary breath-holds or cardiac arrhythmia, image degradation
 				will occur during the long acquisition time and motions, thus affecting the further diagnosis.
 				Accelerated cine MRI has the capability to address these limitations, in which the k-space of all
 				temporal phases can be filled up in a fewer cardiac cycles and in a single breath-hold. It is also
