--- a/Home.html
+++ b/Home.html
@@ -330,13 +330,13 @@ div.WordSection1
     <div class="u-clearfix u-sheet u-sheet-1">
       <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Challenge tasks</h3>
       <p class="u-align-justify u-text u-text-default u-text-grey-60 u-text-2"><b>The ‘CMRxRecon’ challenge includes two
-          independent tasks. Each team can choose to participate one of them or both:&nbsp;</b>
+          independent tasks. Each team can choose to participate in one of them or both:&nbsp;</b>
         <br>1) <a href="Task1-Cine-reconstruction.html"
           class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-grey-60 u-btn-1">Accelerated
           cine reconstruction</a>
         <br>
         <span style="font-weight: 400;">The aim of task 1 is to accelerate cine</span>
-        <span style="font-weight: 400;">&nbsp;imaging by rawdata under-sampling</span>&nbsp;<span
+        <span style="font-weight: 400;">&nbsp;imaging by raw data under-sampling</span>&nbsp;<span
           style="font-weight: 400;">and address the image degradation due to motions caused by voluntary breath-holds or
           cardiac arrhythmia. The final goal will be real-time cine imaging.&nbsp;</span>
         <br>
