--- a/Home.html
+++ b/Home.html
@@ -536,7 +536,7 @@ div.WordSection1
   </section>
   <section class="u-clearfix u-white u-section-7" id="sec-6966">
     <div class="u-clearfix u-sheet u-sheet-1">
-      <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Study Cohort</h3>
+      <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Study cohort</h3>
       <p class="u-align-justify u-text u-text-default u-text-grey-60 u-text-2">
         <span style="font-weight: 700;"></span>A total of 300 healthy volunteers from a single center were included in
         this study.&nbsp;<br>The released dataset includes 120 training data, 60 validation data and 120 test
