--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta charset="utf-8">
   <meta name="keywords" content="">
   <meta name="description" content="">
-  <title>CMRxRecon</title>
-  <link rel="icon" type="image/svg+xml" href="images/cmrlogo.jpeg" />
+  <title>Home</title>
   <link rel="stylesheet" href="nicepage.css" media="screen">
   <link rel="stylesheet" href="Home.css" media="screen">
   <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -95,25 +94,25 @@
                 href="Challenge.html" style="padding: 10px 13px;">Join the Challenge!</a>
             </li>
             <li class="u-nav-item"><a
-              class="u-active-palette-2-base u-border-2 u-border-active-custom-color-5 u-border-hover-white u-button-style u-nav-link u-text-active-white u-text-grey-90 u-text-hover-grey-90 u-white"
-              href="#" style="padding: 10px 13px;">Submission</a>
-            <div class="u-nav-popup">
-              <ul class="u-border-2 u-border-white u-nav u-unstyled u-v-spacing-13 u-nav-2">
-                <li class="u-nav-item"><a
-                    class="u-active-palette-2-base u-button-style u-hover-grey-10 u-nav-link u-white"
-                    href="Validation.html">Validation submission</a>
-                </li>
-                <li class="u-nav-item"><a
-                    class="u-active-palette-2-base u-button-style u-hover-grey-10 u-nav-link u-white"
-                    href="Testing.html">Testing submission</a>
-                </li>
-                <li class="u-nav-item"><a
-                  class="u-active-palette-2-base u-button-style u-hover-grey-10 u-nav-link u-white"
-                  href="STACOM.html">STACOM workshop paper</a>
-              </li>
-              </ul>
-            </div>
-          </li>
+                class="u-active-palette-2-base u-border-2 u-border-active-custom-color-5 u-border-hover-white u-button-style u-nav-link u-text-active-white u-text-grey-90 u-text-hover-grey-90 u-white"
+                style="padding: 10px 13px;">Submission</a>
+              <div class="u-nav-popup">
+                <ul class="u-border-2 u-border-white u-nav u-unstyled u-v-spacing-13 u-nav-3">
+                  <li class="u-nav-item"><a
+                      class="u-active-palette-2-base u-button-style u-hover-grey-10 u-nav-link u-white"
+                      href="Validation.html">Validation submission</a>
+                  </li>
+                  <li class="u-nav-item"><a
+                      class="u-active-palette-2-base u-button-style u-hover-grey-10 u-nav-link u-white"
+                      href="Testing.html">Testing submission</a>
+                  </li>
+                  <li class="u-nav-item"><a
+                      class="u-active-palette-2-base u-button-style u-hover-grey-10 u-nav-link u-white"
+                      href="STACOM.html">STACOM workshop paper</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
             <li class="u-nav-item"><a
                 class="u-active-palette-2-base u-border-2 u-border-active-custom-color-5 u-border-hover-white u-button-style u-nav-link u-text-active-white u-text-grey-90 u-text-hover-grey-90 u-white"
                 href="Organizer.html" style="padding: 10px 13px;">Organizer</a>
@@ -138,10 +137,10 @@
                   <div class="u-nav-popup">
                     <ul class="u-border-2 u-border-white u-nav u-unstyled u-v-spacing-13 u-nav-5">
                       <li class="u-nav-item"><a class="u-button-style u-nav-link"
-                          href="Task1-Cine-reconstruction.html">Task1 Cine reconstruction</a>
+                          href="Task1-Cine-reconstruction.html">Task1: Cine reconstruction</a>
                       </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Task2-T1-T2-mapping.html">Task2
-                          T1 T2 mapping</a>
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Task2-T1-T2-mapping.html">Task2:
+                          T1/T2 mapping</a>
                       </li>
                     </ul>
                   </div>
@@ -149,15 +148,17 @@
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Challenge.html">Join the
                     Challenge!</a>
                 </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="#">Submission</a>
+                <li class="u-nav-item"><a class="u-button-style u-nav-link">Submission</a>
                   <div class="u-nav-popup">
-                    <ul class="u-border-2 u-border-white u-nav u-unstyled u-v-spacing-13 u-nav-5">
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link"
-                          href="Validation.html">Validation submission</a>
+                    <ul class="u-border-2 u-border-white u-nav u-unstyled u-v-spacing-13 u-nav-6">
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Validation.html">Validation
+                          submission</a>
                       </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Testing.html">Testing submission</a>
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Testing.html">Testing
+                          submission</a>
                       </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="STACOM.html">STACOM workshop paper</a>
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="STACOM.html">STACOM workshop
+                          paper</a>
                       </li>
                     </ul>
                   </div>
@@ -175,11 +176,23 @@
           <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
         </div>
       </nav>
-      <div class="u-clearfix u-group-elements u-group-elements-1">
-        <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/cmrlogo.jpeg"
-          alt="" data-image-width="614" data-image-height="550">
-        <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-2"
-          src="images/miccailogo.png" alt="" data-image-width="768" data-image-height="333">
+      <div class="u-clearfix u-layout-wrap u-layout-wrap-1">
+        <div class="u-layout">
+          <div class="u-layout-row">
+            <div class="u-container-style u-layout-cell u-size-19 u-layout-cell-1">
+              <div class="u-container-layout u-valign-bottom u-container-layout-1">
+                <img class="u-expanded-width u-image u-image-contain u-image-default u-image-1"
+                  src="images/cmrlogo.jpeg" alt="" data-image-width="614" data-image-height="550">
+              </div>
+            </div>
+            <div class="u-container-style u-layout-cell u-size-41 u-layout-cell-2">
+              <div class="u-container-layout u-valign-middle u-container-layout-2">
+                <img class="u-expanded-width u-image u-image-contain u-image-default u-image-2"
+                  src="images/miccailogo.png" alt="" data-image-width="768" data-image-height="333">
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </header>
@@ -856,18 +869,8 @@ div.WordSection1
       <p class="u-align-left u-text u-text-default u-text-3">
         <a href="mailto:CMRxRecon@outlook.com"
           class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-color u-btn-2">CMRxRecon@outlook.com</a>
-      </p>
-      <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-1"
-        src="images/hongkongpolytecnic1-removebg-preview.png" alt="" data-image-width="223" data-image-height="226">
-      <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-2"
-        src="images/utd-removebg-preview.png" alt="" data-image-width="225" data-image-height="225">
-      <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-3"
-        src="images/FDU-removebg-preview1.png" alt="" data-image-width="274" data-image-height="262">
-      <img class="u-image u-image-contain u-image-default u-image-4" src="images/IC-removebg-preview.png" alt=""
-        data-image-width="494" data-image-height="186">
-      <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-5" src="images/image40.png"
-        alt="" data-image-width="1200" data-image-height="1200"><span class="u-icon u-icon-2"><svg class="u-svg-link"
-          preserveAspectRatio="xMidYMin slice" viewBox="0 0 1024 1024" style="">
+      </p><span class="u-icon u-icon-2"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice"
+          viewBox="0 0 1024 1024" style="">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-617f"></use>
         </svg><svg class="u-svg-content" viewBox="0 0 1024 1024" id="svg-617f">
           <path
@@ -887,10 +890,8 @@ div.WordSection1
       <p class="u-align-left u-text u-text-default u-text-4">
         <a href="https://twitter.com/CMRxRecon"
           class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-black u-btn-4">CMRxRecon</a>
-      </p>
-      <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-6" src="images/image27.png"
-        alt="" data-image-width="123" data-image-height="132"><span class="u-icon u-icon-4"><svg class="u-svg-link"
-          preserveAspectRatio="xMidYMin slice" viewBox="0 0 1024 1024" style="">
+      </p><span class="u-icon u-icon-4"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice"
+          viewBox="0 0 1024 1024" style="">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1099"></use>
         </svg><svg class="u-svg-content" viewBox="0 0 1024 1024" id="svg-1099">
           <path
@@ -898,12 +899,9 @@ div.WordSection1
             fill="currentColor" p-id="3991"></path>
         </svg></span>
       <a href="https://twitter.com/cmrxmotion"
-        class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-black u-btn-5">CMRxMotion</a>
-      <img class="u-image u-image-contain u-image-default u-image-7" src="images/simens-removebg-preview.png" alt=""
-        data-image-width="450" data-image-height="112">
-      <img class="u-image u-image-contain u-image-default u-image-8" src="images/ZS-removebg-preview.png" alt=""
-        data-image-width="402" data-image-height="162"><span class="u-icon u-icon-5"><svg class="u-svg-link"
-          preserveAspectRatio="xMidYMin slice" viewBox="0 0 1024 1024" style="">
+        class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-black u-btn-5">CMRxMotion</a><span
+        class="u-icon u-icon-5"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 1024 1024"
+          style="">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-8036"></use>
         </svg><svg class="u-svg-content" viewBox="0 0 1024 1024" id="svg-8036">
           <path
@@ -952,13 +950,25 @@ div.WordSection1
         </a>
         <br>
       </p>
+      <img class="u-image u-image-default u-image-1" src="images/2023-05-1212.15.19.png" alt="" data-image-width="1804"
+        data-image-height="486">
       <div
         class="u-border-1 u-border-grey-dark-1 u-expanded-width u-line u-line-horizontal u-opacity u-opacity-30 u-line-1">
       </div>
       <p class="u-align-center u-text u-text-grey-80 u-text-7">© Copyright 2023 CMRxRecon Working Group</p>
     </div>
   </footer>
-
+  <section class="u-backlink u-clearfix u-grey-80">
+    <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+      <span>Website Templates</span>
+    </a>
+    <p class="u-text">
+      <span>created with</span>
+    </p>
+    <a class="u-link" href="" target="_blank">
+      <span>Website Builder Software</span>
+    </a>.
+  </section>
 
 </body>
 
