--- a/Organizer.html
+++ b/Organizer.html
@@ -968,7 +968,7 @@ div.WordSection1
         <div class="u-border-2 u-border-grey-25 u-line u-line-horizontal u-line-1"></div>
         <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/ZS.png" alt="" data-image-width="402" data-image-height="162">
         <p class="u-text u-text-grey-60 u-text-1">
-          <span style="font-weight: 700;">Zhongshan Hospital, China</span>
+          <span style="font-weight: 700;">Department of Radiology, Zhongshan Hospital, China</span>
           <br>
           <br>Zhang Shi
         </p>
