--- a/FAQ.html
+++ b/FAQ.html
@@ -612,8 +612,8 @@ c0.4-0.4,0.4-0.9,0-1.3c-0.4-0.4-1-0.4-1.3,0L8,10.7z"></path></svg></span>
     <div class="u-clearfix u-sheet u-valign-bottom u-sheet-1">
       <h3 class="u-align-left u-text u-text-default u-text-grey-80 u-text-1">Rules</h3>
       <p class="u-align-justify u-text u-text-grey-60 u-text-2"> 1. All individuals who wish to participate in this challenge are required to register using their<span style="font-weight: 700;"> real name, affiliation details (including department, university /institute/company name in full, country), and affiliation E-mails</span>. Incomplete and repetitive registrations will be removed without any prior notice. Each team is permitted to have <span style="font-weight: 700;">a maximum of six members</span>.<br>
-        <br>2. During the validation and training phase, all participants must <span style="font-weight: 700;">submit a complete solutio</span>
-        <span style="font-weight: 700;">n</span> to this challenge, which includes <span style="font-weight: 700;">a Docker image</span>(in tar file format) and <span style="font-weight: 700;">a qualified methodology paper</span> (of at least 8 pages, in LNCS format).<br>
+        <br>2. During the validation and training phase, all participants must <span style="font-weight: 700;">submit a complete solution</span>
+        to this challenge, which includes <span style="font-weight: 700;">a Docker image</span>(in tar file format) and <span style="font-weight: 700;">a qualified methodology paper</span> (of at least 8 pages, in LNCS format).<br>
         <br>3. <span style="font-weight: 700;">All participants must agree that the short papers they submit can be made publicly available on the challenge website, and that organizers can use information provided by participants, including scores, predicted labels, and papers.</span>
         <br>
         <br>4. Participants are <span style="font-weight: 700;">not allowed to register multiple teams or accounts</span>.The CMRxRecon Organizers reserve the right to disqualify such participants.<br>
