--- a/FAQ.html
+++ b/FAQ.html
@@ -243,7 +243,7 @@ c0.4-0.4,0.4-0.9,0-1.3c-0.4-0.4-1-0.4-1.3,0L8,10.7z"></path></svg></span>
           <div class="u-accordion-pane u-container-style u-accordion-pane-3" id="accordion-eb1f" aria-labelledby="link-accordion-eb1f">
             <div class="u-container-layout u-container-layout-3">
               <div class="fr-view u-clearfix u-rich-text u-text">
-                <p>Each team can consist of up to 6 people. The authors in the submitted paper should be the same as the team member list.<br style="box-sizing: border-box; color: rgb(17, 17, 17); font-family: Arial, sans-serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial;" id="isPasted">
+                <p>Each team can consist of up to 6 people. At least one of the team member should be listed as an author of the submitted paper.<br style="box-sizing: border-box; color: rgb(17, 17, 17); font-family: Arial, sans-serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial;" id="isPasted">
                   <br>
                 </p>
               </div>
