--- a/index.html
+++ b/index.html
@@ -644,13 +644,13 @@ div.WordSection1
               <td class="u-table-cell u-text-grey-80"> submission system opens for validation </td>
             </tr>
             <tr style="height: 55px;">
-              <td class="u-grey-10 u-table-cell u-text-grey-90 u-table-cell-9">15 - Jul</td>
-              <td class="u-grey-10 u-table-cell u-text-grey-90 u-table-cell-10"> submission system opens for test set
+              <td class="u-grey-10 u-table-cell u-text-grey-90 u-table-cell-9">14 - July</td>
+              <td class="u-grey-10 u-table-cell u-text-grey-90 u-table-cell-10"> deadline for STACOM placeholder paper submission
               </td>
             </tr>
             <tr style="height: 55px;">
-              <td class="u-table-cell u-text-grey-80"> 14 - July</td>
-              <td class="u-table-cell u-text-grey-80"> deadline for STACOM placeholder paper submission</td>
+              <td class="u-table-cell u-text-grey-80"> 15 - July</td>
+              <td class="u-table-cell u-text-grey-80"> submission system opens for test set</td>
             </tr>
             <tr style="height: 55px;">
               <td class="u-grey-10 u-table-cell u-text-grey-90 u-table-cell-13">14 - Aug</td>
