--- a/Challenge.html
+++ b/Challenge.html
@@ -135,28 +135,23 @@
         <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Download the data</h3>
         <p class="u-align-justify u-text u-text-default u-text-grey-60 u-text-2">Once we received the <a href="files/RegistrationForm.xlsx" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-2-base u-btn-1">registration form</a> and the <a href="files/CMRxReconDataAccessAgreement.pdf" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-2-base u-btn-2">data agreement </a>&nbsp;from your team, you have the access to download the data.<br>[10 May, 2023]&nbsp;Training data and&nbsp;validation data will be released. The results can be evaluated from 30 May, 2023.<br>Please follow the instructions on&nbsp;<a href="https://www.synapse.org/#!Synapse:syn51471091/wiki/622170" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-3">Synapse</a>&nbsp;to download the data.<br>We will send you the link and password to download the data (via <a href="https://onedrive.live.com/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-4">One Drive</a>, <a href="https://pan.baidu.com" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-5">
             <span style="text-decoration: underline !important;">Baidu Netdisk</span>
-          </a>, and <a href="https://www.aliyundrive.com" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-6">
-            <span style="text-decoration: underline !important;">Aliyun Drive</span>
           </a>)<br>
         </p>
       </div>
     </section>
     <section class="u-clearfix u-section-5" id="sec-8a5c">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Run the standard code</h3>
-        <p class="u-align-justify u-text u-text-default u-text-grey-60 u-text-2"> You can run the code package we provide to obtain the results of parallel imaging as a reference.</p>
-        <ul class="u-align-justify u-custom-font u-font-arial u-text u-text-default u-text-grey-60 u-text-3">
-          <li>'CMRxReconDemo': contains parallel imaging reconstruction code</li>
-          <li>'ChallengeDataFormat': Explain the challenge data and the rules for data submission</li>
-          <li>'Evaluation': contains image quality evaluation code for validation and testing (from the FastMRI project: https://github.com/facebookresearch/fastMRI/)</li>
-          <li>'Mapping': contains fitting code for T1 mapping and T2 mapping</li>
-          <li>'Submission': contains the structure for challenge submission</li>
-        </ul>
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Code availability&nbsp;<br>
+        </h3>
+        <p class="u-align-justify u-text u-text-default u-text-grey-60 u-text-2"> We provide the code to facilitate the use of the data we release at <a href="https://github.com/CmrxRecon/CMRxRecon" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-1">https://github.com/CmrxRecon/CMRxRecon</a>.<br>A brief description of the provided package is as follows:&nbsp;<br>
+        </p>
+        <p class="u-align-justify u-text u-text-default u-text-grey-60 u-text-3"> a) 'CMRxReconDemo': contains parallel imaging reconstruction code; <br>b) 'ChallengeDataFormat': explain the challenge data and the rules for data submission; <br>c) 'Evaluation': contains image quality evaluation code for validation and testing; <br>d) 'Mapping': contains fitting code for T1 mapping and T2 mapping; <br>e) ‘Download_Dataset_Check’: check whether the dataset is completely and rightly downloaded; <br>f) 'Submission': contains the structure for challenge submission.
+        </p>
       </div>
     </section>
     <section class="u-clearfix u-section-6" id="sec-fa04">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Evaluation Platform</h3>
+        <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Evaluation platform</h3>
         <p class="u-align-justify u-text u-text-default u-text-grey-60 u-text-2"> Validation of the received docker on unseen test set will be performed on a cloud server with a configuration as follows:</p>
         <ul class="u-align-justify u-custom-font u-font-arial u-text u-text-default u-text-grey-60 u-text-3">
           <li>CPU: Intel(R) Core(TM) i9-10900K CPU @ 3.70GHz, 20 cores;&nbsp;</li>
@@ -420,6 +415,16 @@ The recommended authors of the top 3 winner teams will be invited to contribute 
         <div class="u-border-1 u-border-grey-dark-1 u-expanded-width u-line u-line-horizontal u-opacity u-opacity-30 u-line-1"></div>
         <p class="u-align-center u-text u-text-grey-80 u-text-7">© Copyright 2023 CMRxRecon Working Group</p>
       </div></footer>
-
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+        <span>Website Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="" target="_blank">
+        <span>Website Builder Software</span>
+      </a>. 
+    </section>
   
 </body></html>
