--- a/Home.html
+++ b/Home.html
@@ -602,7 +602,25 @@ div.WordSection1
       </p>
     </div>
   </section>
-  <section class="u-clearfix u-section-9" id="sec-4d5e">
+  <section class="u-clearfix u-white u-section-9" id="sec-9f2e">
+    <div class="u-clearfix u-sheet u-sheet-1">
+      <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Manually segmentation</h3>
+      <p class="u-align-center u-text u-text-2"> Representative Images with Manually Annotations<br>
+      </p>
+      <img class="u-image u-image-contain u-image-default u-image-1" src="images/WechatIMG3450.png" alt=""
+        data-image-width="830" data-image-height="638">
+      <p class="u-align-left u-text u-text-3"> Manual segmentations of myocardium and chambers were performed by an
+        experienced radiologist (with more than 5 years of cardiac imaging experience) using ITK-SNAP (version 3.8.0).
+        The segmentation labels and the corresponding images were stored in NIFTI format, maintaining the original image
+        coordinates. <br>For the LAX cine images, four cardiac chambers have been labeled as follows: <br>a) Left atrium
+        - label 1; <br>b) Right atrium - label 2; <br>c) Left ventricle - label 3; <br>d) Right ventricle - label 4.
+        <br>For the SAX cine images, we performed the following labeling: <br>a) Left ventricle - label 1; <br>b) Left
+        ventricular myocardium - label 2; <br>c) Right ventricle - label 3. <br>The annotations of both T1 mapping and
+        T2 mapping were the same as SAX cine. <br>
+      </p>
+    </div>
+  </section>
+  <section class="u-clearfix u-section-10" id="sec-4d5e">
     <div class="u-clearfix u-sheet u-sheet-1">
       <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Principal of participation</h3>
       <img class="u-expanded-width u-image u-image-contain u-image-default u-preserve-proportions u-image-1"
@@ -614,7 +632,7 @@ div.WordSection1
       </p><span class="u-file-icon u-icon u-icon-1"><img src="images/6897039.png" alt=""></span>
     </div>
   </section>
-  <section class="u-clearfix u-white u-section-10" id="sec-6aef">
+  <section class="u-clearfix u-white u-section-11" id="sec-6aef">
     <div class="u-clearfix u-sheet u-sheet-1">
       <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Timeline</h3>
       <p class="u-text u-text-grey-60 u-text-2"> The schedule of the challenge is as follows. All deadlines are Pacific
@@ -644,13 +662,13 @@ div.WordSection1
               <td class="u-table-cell u-text-grey-80"> submission system opens for validation </td>
             </tr>
             <tr style="height: 55px;">
-              <td class="u-grey-10 u-table-cell u-text-grey-90 u-table-cell-9">14 - July</td>
-              <td class="u-grey-10 u-table-cell u-text-grey-90 u-table-cell-10"> deadline for STACOM placeholder paper submission
+              <td class="u-grey-10 u-table-cell u-text-grey-90 u-table-cell-9">15 - Jul</td>
+              <td class="u-grey-10 u-table-cell u-text-grey-90 u-table-cell-10"> submission system opens for test set
               </td>
             </tr>
             <tr style="height: 55px;">
-              <td class="u-table-cell u-text-grey-80"> 15 - July</td>
-              <td class="u-table-cell u-text-grey-80"> submission system opens for test set</td>
+              <td class="u-table-cell u-text-grey-80"> 14 - July</td>
+              <td class="u-table-cell u-text-grey-80"> deadline for STACOM placeholder paper submission</td>
             </tr>
             <tr style="height: 55px;">
               <td class="u-grey-10 u-table-cell u-text-grey-90 u-table-cell-13">14 - Aug</td>
