--- a/Organizer.html
+++ b/Organizer.html
@@ -968,7 +968,7 @@ div.WordSection1
         <div class="u-border-2 u-border-grey-25 u-line u-line-horizontal u-line-1"></div>
         <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/ZS.png" alt="" data-image-width="402" data-image-height="162">
         <p class="u-text u-text-grey-60 u-text-1">
-          <span style="font-weight: 700;">Department of Radiology, Zhongshan Hospital, China</span>
+          <span style="font-weight: 700;">Zhongshan Hospital, China</span>
           <br>
           <br>Zhang Shi
         </p>
@@ -1081,6 +1081,16 @@ div.WordSection1
         <div class="u-border-1 u-border-grey-dark-1 u-expanded-width u-line u-line-horizontal u-opacity u-opacity-30 u-line-1"></div>
         <p class="u-align-center u-text u-text-grey-80 u-text-7">© Copyright 2023 CMRxRecon Working Group</p>
       </div></footer>
-
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+        <span>Website Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="" target="_blank">
+        <span>Website Builder Software</span>
+      </a>. 
+    </section>
   
 </body></html>
