--- a/Validation.html
+++ b/Validation.html
@@ -119,8 +119,8 @@
         <img class="u-image u-image-contain u-image-default u-image-2" src="images/2023-04-284.10.57.png" alt="" data-image-width="1448" data-image-height="106">
         <img class="u-image u-image-default u-preserve-proportions u-image-3" src="images/2023-04-284.11.13.png" alt="" data-image-width="496" data-image-height="750">
         <ul class="u-custom-font u-font-arial u-text u-text-default u-text-grey-60 u-text-4">
-          <li> CMRxRecon Challenge Task1 Submission</li>
-          <li>CMRxRecon Challenge Task2 Submission&nbsp;</li>
+          <li> Task1. CMRxRecon Cine Reconstruction (9615343) </li>
+          <li> Task2. CMRxRecon T1/T2 Mapping (9615363) </li>
         </ul>
         <p class="u-text u-text-default u-text-grey-60 u-text-5">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Note:&nbsp;<br>Task 1 and Task 2 can be submitted separately or together! They will be separately assessed.<br>For this challenge,&nbsp;you and your team are limited to 3 scored submissions per day for every task.&nbsp;<br>The daily submission limit will reset every day at 00:00:00 PST. <br>When the evaluation is finished, the metrics will be returned on <a href="https://www.synapse.org/#!Synapse:syn51471091/wiki/622170" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-1">Synapse</a>.&nbsp;<br>
         </p><span class="u-file-icon u-icon u-icon-1"><img src="images/6897039.png" alt=""></span>
