--- a/Challenge.html
+++ b/Challenge.html
@@ -115,7 +115,16 @@
     <section class="u-clearfix u-section-2" id="sec-df93">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h3 class="u-text u-text-default u-text-grey-80 u-text-1">Join the challenge！</h3>
-        <p class="u-align-justify u-text u-text-default u-text-grey-60 u-text-2">1. Sign up on the <a href="https://www.synapse.org/#!Synapse:syn51471091/wiki/622170" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-1">Synapse</a> website, and register for the challenge on Synapse as well ( <a href="https://www.synapse.org/#!Synapse:syn51471091/wiki/622170">website</a><br>2. Please&nbsp;fill out the <a href="files/RegistrationForm.xlsx" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-2-base u-btn-2">registration form</a>, including your team name, team members, Synaspe account, and sign the <a href="files/CMRxReconDataAccessAgreement.pdf" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-2-base u-btn-3">data agreement</a>.<br>3. Send both the registration form and the data agreement to <a href="mailto:CMRxRecon@outlook.com" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-4">CMRxRecon@outlook.com</a>.<br>
+        <p class="u-align-justify u-text u-text-default u-text-grey-60 u-text-2">1. Sign up on the 
+		<a href="https://www.synapse.org/#!Synapse:syn51471091/wiki/622170" 
+		   class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-1">
+			Synapse</a> website,
+		and register for the challenge on Synapse as well 
+		(<a href="https://www.synapse.org/#!Synapse:syn51471091/wiki/622170" 
+		    class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-1"
+		    >website</a>）<br>
+		2. Please&nbsp;fill out the <a href="files/RegistrationForm.xlsx" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-2-base u-btn-2">registration form</a>, including your team name, team members, Synaspe account, and sign the <a href="files/CMRxReconDataAccessAgreement.pdf" class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-2-base u-btn-3">data agreement</a>.<br>
+		3. Send both the registration form and the data agreement to <a href="mailto:CMRxRecon@outlook.com" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-4">CMRxRecon@outlook.com</a>.<br>
         </p>
         <p class="u-align-center u-text u-text-3">Email Format</p>
         <img class="u-image u-image-contain u-image-default u-image-1" src="images/2023-05-062.03.45.png" alt="" data-image-width="1726" data-image-height="790">
